# ciris

./: .gitignore  LICENSE.md  README.md  pyproject.toml
ciris/: __init__.py
iris/: __init__.py
iris_core/: __init__.py
tests/: test_iris_core_color.py  test_iris_core_imagecolor.py  test_iris_core_pixelcolor.py  test_iris_core_pixels.py
