[tool.poetry]
name = "iris-core"
version = "0.1.0"
description = "A library containing core functionality of Iris"
authors = ["nickythelion <nickythelionfurry@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
