[tool.poetry]
name = "iris-core"
version = "0.1.0"
description = "A library containing core functionality for Iris"
authors = ["nickythelion <nickythelionfurry@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.4.0"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
